--- a/backend/package.json
+++ b/backend/package.json
@@ -25,6 +25,7 @@
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-rate-limit": "^7.1.5",
     "express-winston": "^4.2.0",
     "helmet": "^7.1.0",
     "http-status-codes": "^2.3.0",
